--- a/FluidMechanics/hagen–poiseuille_equation.ipynb
+++ b/FluidMechanics/hagen–poiseuille_equation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f82fac88",
+   "id": "2f64c834",
    "metadata": {},
    "source": [
-    "# Hagen–Poiseuille equation"
+    "# [Hagen–Poiseuille equation](https://study-astrophysics.com/hagen-poiseuille-equation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d6df53d0",
+   "id": "04245305",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ecef26d",
+   "id": "8f444002",
    "metadata": {},
    "source": [
     "## Hagen–Poiseuille equation (Poissuille law)\n",
