--- a/FluidMechanics/stokes_law.ipynb
+++ b/FluidMechanics/stokes_law.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1cbc4624",
+   "id": "aeaa6b5e",
    "metadata": {},
    "source": [
-    "# Stoke's Law"
+    "# [Stoke's Law](https://study-astrophysics.com/stokes-law/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d3d153da",
+   "id": "51433214",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "685b4e4b",
+   "id": "e35d84b8",
    "metadata": {},
    "source": [
     "## Stoke's Law\n",
