--- a/FluidMechanics/torricellis_law.ipynb
+++ b/FluidMechanics/torricellis_law.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6035b49a",
+   "id": "59b1de67",
    "metadata": {},
    "source": [
-    "# Torricelli's Law"
+    "# [Torricelli's Law](https://study-astrophysics.com/torricellis-law/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5fddf9ed",
+   "id": "26b20dd0",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9167dc8",
+   "id": "1fd03e90",
    "metadata": {},
    "source": [
     "## Torricelli's Law (Torricelli's Theorem)\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2093c112",
+   "id": "33769122",
    "metadata": {},
    "source": [
     "---"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b354b019",
+   "id": "78f69aa5",
    "metadata": {},
    "source": [
     "## Related Topics\n",
