improve visualization, add contents

--- a/ClassicalMechanics/gravitational_force.ipynb
+++ b/ClassicalMechanics/gravitational_force.ipynb
@@ -21,6 +21,9 @@
    "id": "1fb3f580",
    "metadata": {},
    "source": [
+    "## Newton's Law of Universal Gravitation\n",
+    "\n",
+    "\n",
     "Every particle with mass attracts every other particle in the universe with a force that is directly proportional to the product of their masses and inversely proportional to the square of the distance between their centers. \n",
     "\n",
     "\n",
@@ -33,22 +36,9 @@
     "\n",
     "- $m_1$ and $m_2$: masses of two objects\n",
     "- $r$: distance between two objects\n",
-    "- $G$: gravitational constant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c390e05d",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e9096f5",
-   "metadata": {},
-   "source": [
+    "- $G$: gravitational constant\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "- GRE Physics GR1777: Problem [018](https://study-astrophysics.com/gr1777-018/)"
    ]
@@ -70,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
