--- a/ClassicalMechanics/keplers_law.ipynb
+++ b/ClassicalMechanics/keplers_law.ipynb
@@ -104,14 +104,9 @@
     "Thus,\n",
     "$$ \\large v \\ = \\ \\sqrt{\\frac{GM}{r}} $$\n",
     "\n",
-    "The speed is independent of $m$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c442b2e",
-   "metadata": {},
-   "source": [
+    "The speed is independent of $m$.\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "- GRE Physics GR1777: Problem [017](https://study-astrophysics.com/gr1777-017/)"
    ]
