--- a/ClassicalMechanics/momentum.ipynb
+++ b/ClassicalMechanics/momentum.ipynb
@@ -41,16 +41,13 @@
    "source": [
     "## Linear Momentum Conservation\n",
     "\n",
+    "\n",
     "If the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then\n",
     "\n",
-    "$$ \\large m_1\\vec{u_1} + m_2\\vec{u_2} \\ = \\ m_1\\vec{v_1} + m_2\\vec{v_2}. $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "261b1b3b",
-   "metadata": {},
-   "source": [
+    "\n",
+    "$$ \\large m_1\\vec{u_1} + m_2\\vec{u_2} \\ = \\ m_1\\vec{v_1} + m_2\\vec{v_2}. $$\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "- GRE Physics GR1777: Problem [002](https://study-astrophysics.com/gr1777-002/)"
    ]
