--- a/ClassicalMechanics/work.ipynb
+++ b/ClassicalMechanics/work.ipynb
@@ -23,14 +23,9 @@
    "source": [
     "## Work-Energy Principle\n",
     "\n",
-    "$$ \\large W \\ = \\ \\Delta E_k \\ = \\ \\Delta\\frac{1}{2}mv^2 $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca56146e",
-   "metadata": {},
-   "source": [
+    "$$ \\large W \\ = \\ \\Delta E_k \\ = \\ \\Delta\\frac{1}{2}mv^2 $$\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "\n",
     "- GRE Physics GR1777: Problems [002](https://study-astrophysics.com/gr1777-002/), [019](https://study-astrophysics.com/gr1777-019/)"
@@ -53,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
