--- a/Electrodynamics/capacitor.ipynb
+++ b/Electrodynamics/capacitor.ipynb
@@ -23,7 +23,17 @@
    "source": [
     "## Capacity\n",
     "\n",
-    "$$ \\large C = \\frac{\\epsilon A}{d} = \\frac{k \\epsilon}{d} $$\n"
+    "\n",
+    "### Parallel Plate Capacitor\n",
+    "\n",
+    "$$ \\large C = \\frac{\\epsilon A}{d} \\ = \\ \\frac{k \\epsilon}{d} $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Spherical Capacitor\n",
+    "\n",
+    "\n",
+    "$$ \\large C \\ = \\ \\frac{4\\pi\\epsilon_0 ab}{a-b} $$"
    ]
   },
   {
@@ -129,6 +139,54 @@
     "\n",
     "$$ \\large U \\ = \\ \\frac{1}{2} CV^2 \\ = \\ \\frac{Q^2}{2C} \\ = \\ \\frac{1}{2} QV $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a325c7",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c672422",
+   "metadata": {},
+   "source": [
+    "## Charging and Discharging\n",
+    "\n",
+    "\n",
+    "### Charging\n",
+    "\n",
+    "\n",
+    "$$ \\large q \\ = \\ q_0 (1 - e^{-t/RC} $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Discharging\n",
+    "\n",
+    "\n",
+    "$$ \\large q \\ = \\ q_0 e^{-t/RC} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f59d36",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "222b7e4b",
+   "metadata": {},
+   "source": [
+    "## Impedance of Capacitor\n",
+    "\n",
+    "\n",
+    "$$ \\large Z \\ = \\ \\frac{1}{i\\omega C} $$"
+   ]
   }
  ],
  "metadata": {
@@ -147,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
