--- a/Electrodynamics/conductors.ipynb
+++ b/Electrodynamics/conductors.ipynb
@@ -10,17 +10,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d83bbfa0",
+   "id": "3bd79d1c",
    "metadata": {},
    "source": [
-    "## Conductors in Electrostatic Equilibrium "
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c316374c",
+   "id": "d83bbfa0",
    "metadata": {},
    "source": [
+    "## Conductors in Electrostatic Equilibrium \n",
+    "\n",
+    "\n",
     "- $\\vec{E} = 0$ inside the conductor.\n",
     "\n",
     "\n",
@@ -30,7 +33,10 @@
     "- The electric field $\\vec{E}$ outside the conductor is perpendiculuar to the surface of the conductor.\n",
     "\n",
     "\n",
-    "- Charge accumulates at sharp points. "
+    "- Charge accumulates at sharp points. \n",
+    "\n",
+    "\n",
+    "- Conductors do not transmit electromagnetic wave."
    ]
   }
  ],
@@ -50,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
