--- a/Electrodynamics/inductor.ipynb
+++ b/Electrodynamics/inductor.ipynb
@@ -85,6 +85,25 @@
     "\n",
     "$$ \\large U \\ = \\ \\frac{1}{2} L I^2 $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23baf12c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a2b981",
+   "metadata": {},
+   "source": [
+    "## Impedance of Inductor\n",
+    "\n",
+    "\n",
+    "$$ \\large Z \\ = \\ i \\omega L $$"
+   ]
   }
  ],
  "metadata": {
@@ -103,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
