--- a/Electrodynamics/lc_circuit.ipynb
+++ b/Electrodynamics/lc_circuit.ipynb
@@ -34,6 +34,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1a3c954",
+   "metadata": {},
+   "source": [
+    "## Time Constant for an L-C Circuit\n",
+    "\n",
+    "\n",
+    "$$ \\large \\omega_0 \\ = \\ \\frac{1}{\\sqrt{LC}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a031aca2",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "271b6697",
    "metadata": {},
    "source": [
@@ -138,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
