--- a/Electrodynamics/rlc_circuit.ipynb
+++ b/Electrodynamics/rlc_circuit.ipynb
@@ -24,7 +24,10 @@
     "## Impedence\n",
     "\n",
     "\n",
-    "$$ \\large Z = \\sqrt{R^2 + (X_L + X_C)^2} $$\n",
+    "\n",
+    "### Series\n",
+    "\n",
+    "$$ \\large Z \\ = \\ \\sqrt{R^2 + (X_L + X_C)^2} $$\n",
     "\n",
     "\n",
     "where\n",
@@ -33,7 +36,17 @@
     "- $X_L = \\omega L$: inductive reactance\n",
     "\n",
     "\n",
-    "- $X_C = \\frac{1}{\\omega C}$: capacitive reactance"
+    "- $X_C = \\frac{1}{\\omega C}$: capacitive reactance\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Parallel\n",
+    "\n",
+    "\n",
+    "$$ \\large \\frac{1}{Z} \\ = \\ \\left[ \\left( \\frac{1}{R} \\right)^2 + \\left( \\frac{1}{X_C} - \\frac{1}{X_L} \\right)^2 \\right]^{1/2} $$\n",
+    "\n",
+    "\n",
+    "Current is maximized at resonance $X_L = \\omega L = X_C = 1/\\omega C$"
    ]
   },
   {
@@ -189,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
