--- a/ClassicalMechanics/center_of_mass.ipynb
+++ b/ClassicalMechanics/center_of_mass.ipynb
@@ -21,18 +21,15 @@
    "id": "21d2fc2a",
    "metadata": {},
    "source": [
+    "## Center of Mass\n",
+    "\n",
     "$$ \\large \\vec{x}_c = \\frac{m_1 \\vec{x}_1 + m_2 \\vec{x}_2}{m_1 + m_2} = \\frac{\\sum m_i \\vec{x}_i}{M} = \\frac{\\int x dM}{M} $$\n",
     "\n",
     "where \n",
     "\n",
-    "- $M$: total mass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5cb54891",
-   "metadata": {},
-   "source": [
+    "- $M$: total mass\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "- GRE Physics GR0877: Problem 084"
    ]
@@ -54,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
