--- a/ClassicalMechanics/newtons_law.ipynb
+++ b/ClassicalMechanics/newtons_law.ipynb
@@ -27,14 +27,9 @@
     "\n",
     "Mathematically, this is equivalent to saying that if the net force on an object is zero, then the velocity of the object is constant.\n",
     "\n",
-    "$$ \\large \\vec{F} \\ = \\ m\\frac{d\\vec{v}}{dt} \\ = \\ 0 \\quad \\quad \\rightarrow \\quad \\quad \\vec{v} \\ = \\ \\text{constant.} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a17835bf",
-   "metadata": {},
-   "source": [
+    "$$ \\large \\vec{F} \\ = \\ m\\frac{d\\vec{v}}{dt} \\ = \\ 0 \\quad \\quad \\rightarrow \\quad \\quad \\vec{v} \\ = \\ \\text{constant.} $$\n",
+    "\n",
+    "\n",
     "### Related Problems"
    ]
   },
@@ -55,14 +50,9 @@
     "\n",
     "The rate of change of momentum of a body over time is directly proportional to the force applied, and occurs in the same direction as the applied force.\n",
     "\n",
-    "$$ \\large \\vec{F} \\ = \\ m \\frac{d^2 \\vec{x}}{d t^2} \\ = \\ m \\frac{d \\vec{v}}{dt} \\ = \\ m\\vec{a} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c258958e",
-   "metadata": {},
-   "source": [
+    "$$ \\large \\vec{F} \\ = \\ m \\frac{d^2 \\vec{x}}{d t^2} \\ = \\ m \\frac{d \\vec{v}}{dt} \\ = \\ m\\vec{a} $$\n",
+    "\n",
+    "\n",
     "### Related Problems\n",
     "\n",
     "- GRE Physics GR1777: Problem [001](https://study-astrophysics.com/gr1777-001/)"
@@ -81,14 +71,9 @@
    "id": "2b31fe3d",
    "metadata": {},
    "source": [
-    "## Newton's Thrid Law (Action-reaction law)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a56bd3bc",
-   "metadata": {},
-   "source": [
+    "## Newton's Thrid Law (Action-reaction law)\n",
+    "\n",
+    "\n",
     "All forces between two objects exist in equal magnitude and opposite direction.\n",
     "\n",
     "$$ \\large F_{12} \\ = \\ - F_{21} $$"
