--- a/Electrodynamics/electric_force.ipynb
+++ b/Electrodynamics/electric_force.ipynb
@@ -21,6 +21,8 @@
    "id": "c3bb3261",
    "metadata": {},
    "source": [
+    "## Electric Force\n",
+    "\n",
     "$$ \\large \\vec{F} \\ = \\ q \\vec{E} $$\n",
     "\n",
     "\n",
@@ -54,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
