--- a/Electrodynamics/magnetic_field.ipynb
+++ b/Electrodynamics/magnetic_field.ipynb
@@ -23,7 +23,10 @@
    "source": [
     "## Infinitely Long Solenoid\n",
     "\n",
-    "$$ \\large |\\vec{B}| \\ = \\ \\mu_0 I n $$\n",
+    "$$ \\large \\vec{B} = \\left\\{ \\begin{split}\n",
+    " \\mu_0 I n \\hat{z} & \\quad \\text{inside a solenoid} \\\\\n",
+    " 0 & \\quad \\text{outside a solenoid} \n",
+    " \\end{split}  \\right. $$\n",
     "\n",
     "\n",
     "where\n",
@@ -48,7 +51,7 @@
    "id": "d3e7102c",
    "metadata": {},
    "source": [
-    "## Center of the Loop\n",
+    "## Center of a Loop (a Ring Wire)\n",
     "\n",
     "$$ \\large |\\vec{B}| = \\frac{\\mu_0 I}{4\\pi r^2} \\int^{2\\pi}_{0} d\\theta = \\frac{\\mu_0 I}{2r} $$"
    ]
@@ -66,7 +69,7 @@
    "id": "b156909c",
    "metadata": {},
    "source": [
-    "## One Long Wire\n",
+    "## A Long Wire\n",
     "\n",
     "\n",
     "$$ \\large\n",
@@ -93,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
