--- a/Electrodynamics/lenzs_law.ipynb
+++ b/Electrodynamics/lenzs_law.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "682ba0f9",
+   "id": "bcb4f4d5",
    "metadata": {},
    "source": [
-    "# Lenz's Law"
+    "# [Lenz's Law](https://study-astrophysics.com/lenzs-law/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32ff9dab",
+   "id": "a6c9b1e4",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db718563",
+   "id": "794e8a09",
    "metadata": {},
    "source": [
     "## Lenz's Law\n",
