--- a/Electrodynamics/rc_circuit.ipynb
+++ b/Electrodynamics/rc_circuit.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9af2ac06",
+   "id": "b1708bdc",
    "metadata": {},
    "source": [
-    "# RC Circuit"
+    "# [RC Circuit](https://study-astrophysics.com/rc-circuit/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "229b6c1f",
+   "id": "2435859b",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c6a834c",
+   "id": "06bd9650",
    "metadata": {},
    "source": [
     "## Time Constant for an R-C Circuit\n",
