--- a/Electrodynamics/rl_circuit.ipynb
+++ b/Electrodynamics/rl_circuit.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f919ee3b",
+   "id": "2acedb5a",
    "metadata": {},
    "source": [
-    "# RL Circuit"
+    "# [RL Circuit](https://study-astrophysics.com/rl-circuit/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "99fed036",
+   "id": "9fa911bc",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b7002b6",
+   "id": "59f17490",
    "metadata": {},
    "source": [
     "## Time Constant for R-L Circuit\n",
