--- a/FluidMechanics/ficks_laws_of_diffusion.ipynb
+++ b/FluidMechanics/ficks_laws_of_diffusion.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "48e29d5d",
+   "id": "398d790b",
    "metadata": {},
    "source": [
-    "# Fick's Laws of Diffusion"
+    "# [Fick's Laws of Diffusion](https://study-astrophysics.com/ficks-laws-of-diffusion/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "871d7ea8",
+   "id": "6f302b25",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94728061",
+   "id": "4cfd5fae",
    "metadata": {},
    "source": [
     "## First Law\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6d10860",
+   "id": "f0bdeb44",
    "metadata": {},
    "source": [
     "---"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62caafdc",
+   "id": "87ca51de",
    "metadata": {},
    "source": [
     "## Second Law\n",
