add links, contents

--- a/Optics/diffraction.ipynb
+++ b/Optics/diffraction.ipynb
@@ -56,10 +56,10 @@
     "\n",
     "\n",
     "\n",
-    "For a maximum condition,\n",
+    "### Maxima\n",
     "\n",
     "\n",
-    "$$ \\large d \\sin\\theta = n \\lambda, \\quad \\quad n = 0, 1, 2, \\cdots  $$\n",
+    "$$ \\large d \\sin\\theta \\ = \\ n \\lambda, \\quad \\quad n = 0, 1, 2, \\cdots  $$\n",
     "\n",
     "\n",
     "where\n",
@@ -68,6 +68,11 @@
     "- $d$: distance between slits\n",
     "\n",
     "\n",
+    "\n",
+    "### Minima\n",
+    "\n",
+    "\n",
+    "$$ \\large d \\sin \\theta \\ = \\left( m + \\frac{1}{2} \\right) \\lambda, \\quad \\quad n = 0, 1, 2 \\cdots $$\n",
     "\n",
     "### Related Problems\n",
     "\n",
