--- a/Optics/interference.ipynb
+++ b/Optics/interference.ipynb
@@ -27,10 +27,10 @@
     "$$ \\large 2nd = m \\lambda $$\n",
     "\n",
     "\n",
-    "- constructive interference\n",
+    "- constructive interference: $2d = \\left( n + \\frac{1}{2} \\right) \\lambda$\n",
     "\n",
     "\n",
-    "- destructive interference\n",
+    "- destructive interference: $2d = n\\lambda$\n",
     "\n",
     "\n",
     "### Related Problems\n",
