--- a/Optics/laser.ipynb
+++ b/Optics/laser.ipynb
@@ -5,7 +5,15 @@
    "id": "9e88a5b3",
    "metadata": {},
    "source": [
-    "# Laser"
+    "# [Laser](https://study-astrophysics.com/laser/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3736b778",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -20,6 +28,14 @@
     "- Free-electron laser: electron only\n",
     "- Gas laser: free atom\n",
     "- Solid-state laser: solid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92045164",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -52,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
