--- a/Optics/spectrometer.ipynb
+++ b/Optics/spectrometer.ipynb
@@ -5,7 +5,15 @@
    "id": "751c5c56",
    "metadata": {},
    "source": [
-    "# Spectrometer"
+    "# [Spectrometer](https://study-astrophysics.com/spectrometer/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2ff56c3",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -25,7 +33,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -39,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
