--- a/Optics/transmission.ipynb
+++ b/Optics/transmission.ipynb
@@ -5,7 +5,7 @@
    "id": "8f8a1c2b",
    "metadata": {},
    "source": [
-    "# Transmission"
+    "# [Transmission](https://study-astrophysics.com/transmission/)"
    ]
   },
   {
