add contents, links

--- a/StatisticalMechanics/laws_of_thermodynamics.ipynb
+++ b/StatisticalMechanics/laws_of_thermodynamics.ipynb
@@ -18,6 +18,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6937636d",
+   "metadata": {},
+   "source": [
+    "## 0. Zeroth Law\n",
+    "\n",
+    "\n",
+    "If two bodies are each in thermal equilibrium with some third body, then they are also in equilibrium with each other."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd96c223",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "89bceff9",
    "metadata": {},
    "source": [
