--- a/StatisticalMechanics/work(thermodynamics).ipynb
+++ b/StatisticalMechanics/work(thermodynamics).ipynb
@@ -41,6 +41,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17ca498c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f675b01",
+   "metadata": {},
+   "source": [
+    "## Work in the P-V Diagram\n",
+    "\n",
+    "In the P-V diagram, the work done is the **area under the curve**.\n",
+    "\n",
+    "\n",
+    "- If the process moves clockwise, the work is positive.\n",
+    "\n",
+    "- If the process moves anti-clockwise, the work is negative."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b63f59bb",
    "metadata": {},
    "source": [
