--- a/StatisticalMechanics/degree_of_freedom.ipynb
+++ b/StatisticalMechanics/degree_of_freedom.ipynb
@@ -37,6 +37,25 @@
     "### Related Problems\n",
     "- GRE Physics GR0177: Problem 005"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54499737",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc6a53ec",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### Equipartition Theorem"
+   ]
   }
  ],
  "metadata": {
@@ -55,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
