--- a/Optics/brewsters_angle.ipynb
+++ b/Optics/brewsters_angle.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "703ba086",
+   "id": "2c6c23c4",
    "metadata": {},
    "source": [
-    "# Brewster's Angle"
+    "# [Brewster's Angle](https://study-astrophysics.com/brewsters-angle/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f51492b4",
+   "id": "c2d04df4",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2980138",
+   "id": "101a5297",
    "metadata": {},
    "source": [
     "## Brewster's Law\n",
