--- a/StatisticalMechanics/conduction.ipynb
+++ b/StatisticalMechanics/conduction.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b22d6d29",
+   "id": "b4594f1f",
    "metadata": {},
    "source": [
-    "# Conduction"
+    "# [Conduction](https://study-astrophysics.com/conduction/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63a00905",
+   "id": "87d89585",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8aee2e1",
+   "id": "43e5e289",
    "metadata": {},
    "source": [
     "## Conduction Rate\n",
