--- a/StatisticalMechanics/daltons_law.ipynb
+++ b/StatisticalMechanics/daltons_law.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01bf4d9d",
+   "id": "a6fbbb02",
    "metadata": {},
    "source": [
-    "# Dalton's Law"
+    "# [Dalton's Law](https://study-astrophysics.com/daltons-law/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9ceb6f75",
+   "id": "483d9e79",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f3217c6",
+   "id": "79c83a2e",
    "metadata": {},
    "source": [
     "## Dalton's Law\n",
