--- a/StatisticalMechanics/degree_of_freedom.ipynb
+++ b/StatisticalMechanics/degree_of_freedom.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54499737",
+   "id": "d0ef82ae",
    "metadata": {},
    "source": [
     "---"
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6a53ec",
+   "id": "7cdbcc16",
    "metadata": {},
    "source": [
     "## Related Topics\n",
     "\n",
     "\n",
-    "### Equipartition Theorem"
+    "### [Equipartition Theorem](https://study-astrophysics.com/equipartition-theorem/)"
    ]
   }
  ],
