--- a/StatisticalMechanics/equipartition_theorem.ipynb
+++ b/StatisticalMechanics/equipartition_theorem.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b39317e1",
+   "id": "32b69b48",
    "metadata": {},
    "source": [
-    "# Equipartition Theorem"
+    "# [Equipartition Theorem](https://study-astrophysics.com/equipartition-theorem/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "806c9656",
+   "id": "487ac68b",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b63b023f",
+   "id": "27a784d4",
    "metadata": {},
    "source": [
     "## Equipartition Theorem\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7517c88f",
+   "id": "15c40381",
    "metadata": {},
    "source": [
     "---"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7ae573",
+   "id": "32870e5d",
    "metadata": {},
    "source": [
     "## Related Topics\n",
@@ -49,7 +49,7 @@
     "### [Degree of Freedom](https://study-astrophysics.com/degree-of-freedom/)\n",
     "\n",
     "\n",
-    "### Kinetic Theory"
+    "### [Kinetic Theory](https://study-astrophysics.com/kinetic-theory/)"
    ]
   }
  ],
