--- a/StatisticalMechanics/kinetic_theory.ipynb
+++ b/StatisticalMechanics/kinetic_theory.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ab373ef4",
+   "id": "da935893",
    "metadata": {},
    "source": [
-    "# Kinetic Theory"
+    "# [Kinetic Theory](https://study-astrophysics.com/kinetic-theory/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4ffe1916",
+   "id": "bdb8ac9c",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa1edb9c",
+   "id": "b129fba5",
    "metadata": {},
    "source": [
     "## Kinetic Theory of Gases\n",
