--- a/StatisticalMechanics/gibbs–helmholtz_equation.ipynb
+++ b/StatisticalMechanics/gibbs–helmholtz_equation.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "daf57530",
+   "id": "4a927dd5",
    "metadata": {},
    "source": [
-    "# Gibbs–Helmholtz Equation"
+    "# [Gibbs–Helmholtz Equation](https://study-astrophysics.com/gibbs-helmholtz-equation/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd70f0f4",
+   "id": "c498cc3a",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b084f09",
+   "id": "16ce70f3",
    "metadata": {},
    "source": [
     "## Gibbs–Helmholtz Equation\n",
