--- a/QuantumMechanics/1d_infinite_square_well.ipynb
+++ b/QuantumMechanics/1d_infinite_square_well.ipynb
@@ -158,6 +158,58 @@
     "\n",
     "$$ \\large c_n = \\sqrt{\\frac{2}{L}} \\int^L_0 \\sin \\left( \\frac{n \\pi}{L}x \\right) \\Psi (x,0) dx $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "317db0ad",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53596857",
+   "metadata": {},
+   "source": [
+    "One-dimensional problem has no degenerate states."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "545fcc5d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e59e6fa",
+   "metadata": {},
+   "source": [
+    "## Delta Function Well\n",
+    "\n",
+    "\n",
+    "### Potential\n",
+    "\n",
+    "$$ \\large V \\ = \\ - \\alpha \\delta (x) $$\n",
+    "\n",
+    "\n",
+    "### It only has one bound state, and many scattering states.\n",
+    "\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "\n",
+    "$$ \\large \\psi (x)  \\ = \\ \\sqrt{\\frac{m\\alpha}{\\hbar}} e^{-m\\alpha|x|/\\pi^2} $$\n",
+    "\n",
+    "\n",
+    "### Energy\n",
+    "\n",
+    "\n",
+    "$$ \\large E \\ = \\ - \\frac{m\\alpha^2}{2\\hbar^2} $$"
+   ]
   }
  ],
  "metadata": {
@@ -176,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
