--- a/QuantumMechanics/time_dependent_schrodinger_equation.ipynb
+++ b/QuantumMechanics/time_dependent_schrodinger_equation.ipynb
@@ -54,12 +54,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13b02d5e",
+   "cell_type": "markdown",
+   "id": "ee41b549",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "One-dimensional problem has no degenerate states."
+   ]
   }
  ],
  "metadata": {
