--- a/QuantumMechanics/time_independent_schrodinger_equation.ipynb
+++ b/QuantumMechanics/time_independent_schrodinger_equation.ipynb
@@ -99,6 +99,22 @@
     "$$ \\large \\sum^\\infty_{n=1} E_n |c_n|^2 \\ = \\ \\langle \\hat{H} \\rangle \\ = \\ \\langle E \\rangle $$\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abadea9e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcaf788d",
+   "metadata": {},
+   "source": [
+    "One-dimensional problem has no degenerate states."
+   ]
   }
  ],
  "metadata": {
