--- a/LaboratoryMethods/error_analysis.ipynb
+++ b/LaboratoryMethods/error_analysis.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f893e632",
+   "id": "e2558ff3",
    "metadata": {},
    "source": [
-    "# Erorr Analysis"
+    "# [Erorr Analysis](https://study-astrophysics.com/erorr-analysis/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13f8e4e0",
+   "id": "26dbed67",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27eed80c",
+   "id": "43847fce",
    "metadata": {},
    "source": [
     "## Estimation\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d3426e3",
+   "id": "a33217ff",
    "metadata": {},
    "source": [
     "---"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad033c09",
+   "id": "896d27a1",
    "metadata": {},
    "source": [
     "## Propagation of Uncertainties\n",
