--- a/LaboratoryMethods/poisson_distribution.ipynb
+++ b/LaboratoryMethods/poisson_distribution.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23fa344c",
+   "id": "abe23498",
    "metadata": {},
    "source": [
-    "# Poisson Distribution"
+    "# [Poisson Distribution](https://study-astrophysics.com/poisson-distribution/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "94b339fe",
+   "id": "7358e863",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34710986",
+   "id": "b2951a4c",
    "metadata": {},
    "source": [
     "## Standard Deviation\n",
