add related topics

--- a/ClassicalMechanics/oscillations.ipynb
+++ b/ClassicalMechanics/oscillations.ipynb
@@ -64,6 +64,25 @@
     "- GRE Physics GR1777 Problem [003](https://study-astrophysics.com/gr1777-003/)\n",
     "- GRE Physics GR0877 Problem 059"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18619d85",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1289287f",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### Simple Pendulum"
+   ]
   }
  ],
  "metadata": {
