add links and contents

--- a/ClassicalMechanics/simple_pendulum.ipynb
+++ b/ClassicalMechanics/simple_pendulum.ipynb
@@ -5,7 +5,7 @@
    "id": "f39491e6",
    "metadata": {},
    "source": [
-    "# Simple Pendulum"
+    "# [Simple Pendulum](https://study-astrophysics.com/simple-pendulum/)"
    ]
   },
   {
@@ -79,6 +79,25 @@
     "### Related Problems\n",
     "- GRE Physics GR1777 Problem [003](https://study-astrophysics.com/gr1777-003/)\n",
     "- GRE Physics GR0877 Problem 059"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de281f6a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bd832f3",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Oscillations](https://study-astrophysics.com/oscillations/)"
    ]
   }
  ],
