--- a/ClassicalMechanics/simple_pendulum.ipynb
+++ b/ClassicalMechanics/simple_pendulum.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0177 Problem [001]"
+    "- GRE Physics GR0177 Problem [001](https://study-astrophysics.com/gr0177/)"
    ]
   },
   {
