add related problems

--- a/ClassicalMechanics/newtons_law.ipynb
+++ b/ClassicalMechanics/newtons_law.ipynb
@@ -30,7 +30,9 @@
     "$$ \\large \\vec{F} \\ = \\ m\\frac{d\\vec{v}}{dt} \\ = \\ 0 \\quad \\quad \\rightarrow \\quad \\quad \\vec{v} \\ = \\ \\text{constant.} $$\n",
     "\n",
     "\n",
-    "### Related Problems"
+    "### Related Problems\n",
+    "\n",
+    "- GRE Physics GR0877 Problem [001](https://study-astrophysics.com/gr0877-001/)"
    ]
   },
   {
@@ -55,7 +57,7 @@
     "\n",
     "### Related Problems\n",
     "\n",
-    "- GRE Physics GR1777: Problem [001](https://study-astrophysics.com/gr1777-001/)"
+    "- GRE Physics GR1777 Problem [001](https://study-astrophysics.com/gr1777-001/)"
    ]
   },
   {
