--- a/ClassicalMechanics/free_fall_motion.ipynb
+++ b/ClassicalMechanics/free_fall_motion.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f3db01f",
+   "id": "a0279238",
    "metadata": {},
    "source": [
-    "# Free Fall Motion"
+    "# [Free-Fall Motion](https://study-astrophysics.com/free-fall-motion/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "730734a2",
+   "id": "13383604",
    "metadata": {},
    "source": [
     "---"
@@ -18,10 +18,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a6788b1",
+   "id": "bce902e0",
    "metadata": {},
    "source": [
-    "## Free Fall Motion\n",
+    "## Free-Fall Motion\n",
     "\n",
     "\n",
     "When we ignore the air resistance, the position, velocity, and the acceleration are\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b0264b",
+   "id": "b99759d0",
    "metadata": {},
    "source": [
     "---"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab8e033",
+   "id": "ee406490",
    "metadata": {},
    "source": [
     "## Related Topics\n",
