--- a/ClassicalMechanics/free_fall_motion.ipynb
+++ b/ClassicalMechanics/free_fall_motion.ipynb
@@ -45,7 +45,7 @@
     "- $v(t)$: velocity after time $t$\n",
     "\n",
     "\n",
-    "- $h(t$): height after time $t$\n",
+    "- $h(t)$: height after time $t$\n",
     "\n",
     "\n",
     "- $h_0$: initial height\n",
