--- a/ClassicalMechanics/free_fall_motion.ipynb
+++ b/ClassicalMechanics/free_fall_motion.ipynb
@@ -54,7 +54,7 @@
     "- $t$: time passed\n",
     "\n",
     "\n",
-    "- $g$: gravitational constant ($\\sim 9.8 \\text{ m/s}^2$)"
+    "- $g$: gravitational constant ($\\approx 9.8 \\text{ m/s}^2$)"
    ]
   },
   {
