add related problem

--- a/ClassicalMechanics/free_fall_motion.ipynb
+++ b/ClassicalMechanics/free_fall_motion.ipynb
@@ -54,7 +54,12 @@
     "- $t$: time passed\n",
     "\n",
     "\n",
-    "- $g$: gravitational constant ($\\approx 9.8 \\text{ m/s}^2$)"
+    "- $g$: gravitational constant ($\\approx 9.8 \\text{ m/s}^2$)\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0877 Problem [002](https://study-astrophysics.com/gr0877-002/)"
    ]
   },
   {
