--- a/ParticlePhysics/selection_rule.ipynb
+++ b/ParticlePhysics/selection_rule.ipynb
@@ -32,6 +32,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [099](https://study-astrophysics.com/gr1777-099/)\n",
     "- GRE Physics GR0177 Problem 084\n"
    ]
   },
@@ -63,7 +64,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -77,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
