--- a/Optics/braggs_law.ipynb
+++ b/Optics/braggs_law.ipynb
@@ -45,6 +45,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777: Problem [098](https://study-astrophysics.com/gr1777-098/)\n",
     "- GRE Physics GR0877: Problem 052"
    ]
   },
@@ -65,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -79,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
