--- a/ClassicalMechanics/lagrangian.ipynb
+++ b/ClassicalMechanics/lagrangian.ipynb
@@ -29,7 +29,12 @@
     "\n",
     "- $T = \\frac{1}{2} m v^2 $: kinetic energy\n",
     "\n",
-    "- $V$: potential energy"
+    "- $V$: potential energy\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [097](https://study-astrophysics.com/gr1777-097/)"
    ]
   },
   {
@@ -58,7 +63,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -72,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
