--- a/ClassicalMechanics/springs.ipynb
+++ b/ClassicalMechanics/springs.ipynb
@@ -43,7 +43,12 @@
    "source": [
     "## Spring Potential Energy\n",
     "\n",
-    "$$ \\large V \\ = \\ \\frac{1}{2} k x^2 \\ = \\ \\frac{1}{2} m \\omega^2 x^2 $$"
+    "$$ \\large V \\ = \\ \\frac{1}{2} k x^2 \\ = \\ \\frac{1}{2} m \\omega^2 x^2 $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [097](https://study-astrophysics.com/gr1777-097/)"
    ]
   },
   {
@@ -114,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
