--- a/Electrodynamics/electric_potential.ipynb
+++ b/Electrodynamics/electric_potential.ipynb
@@ -48,15 +48,48 @@
     "\n",
     "where \n",
     "\n",
-    "$Q$: point charge\n",
+    "- $Q$: point charge\n",
     "\n",
-    "$r$: distance\n",
+    "\n",
+    "- $r$: distance\n",
     "\n",
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR1777 Problem [038](https://study-astrophysics.com/gr1777-038/)\n",
     "- GRE Physics GR0877 Problem 090\n",
     "- GRE Physics GR0177 Problem 058"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e656cb79",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27f2679a",
+   "metadata": {},
+   "source": [
+    "## Of a Charged Ring\n",
+    "\n",
+    "\n",
+    "$$ \\large V = \\frac{1}{4\\pi \\epsilon_0} \\frac{Q}{r} = \\frac{1}{4\\pi \\epsilon_0} \\frac{\\lambda 2 \\pi R'}{r} $$\n",
+    "\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\n",
+    "- $Q$: total charge\n",
+    "\n",
+    "\n",
+    "- $\\lambda$: linear charge density\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [095](https://study-astrophysics.com/gr1777-095/)"
    ]
   },
   {
@@ -106,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -120,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
