--- a/Electrodynamics/electrical_energy.ipynb
+++ b/Electrodynamics/electrical_energy.ipynb
@@ -27,7 +27,12 @@
     "\n",
     "Thus,\n",
     "\n",
-    "$$ \\large \\Rightarrow \\quad v = \\sqrt{\\frac{2qV}{m}} $$"
+    "$$ \\large \\Rightarrow \\quad v = \\sqrt{\\frac{2qV}{m}} $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [095](https://study-astrophysics.com/gr1777-095/)"
    ]
   },
   {
@@ -87,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
