--- a/Electrodynamics/capacitor.ipynb
+++ b/Electrodynamics/capacitor.ipynb
@@ -38,6 +38,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8569e7e0",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35ba21e",
+   "metadata": {},
+   "source": [
+    "## Potential (Voltage)\n",
+    "\n",
+    "\n",
+    "$$ \\large V = \\frac{Q}{C} $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [094](https://study-astrophysics.com/gr1777-094/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0b716386",
    "metadata": {},
    "source": [
@@ -101,7 +124,11 @@
    "source": [
     "## Capacitors in Serial\n",
     "\n",
-    "$$ \\large \\frac{1}{C_\\text{Total}} \\ = \\ \\sum_i \\frac{1}{C_i} $$"
+    "$$ \\large \\frac{1}{C_\\text{Total}} \\ = \\ \\sum_i \\frac{1}{C_i} $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [094](https://study-astrophysics.com/gr1777-094/)"
    ]
   },
   {
@@ -191,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
