Add a related problem (GR1777-093)

--- a/Relativity/relativistic_energy.ipynb
+++ b/Relativity/relativistic_energy.ipynb
@@ -21,7 +21,7 @@
    "id": "0df5d802",
    "metadata": {},
    "source": [
-    "## Energy-momentum Relation\n",
+    "## Energy-momentum Relation (Invariant Energy)\n",
     "\n",
     "$$ \\large E^2 = (pc)^2 + (mc^2)^2 $$\n",
     "\n",
@@ -37,7 +37,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [036](https://study-astrophysics.com/gr1777-036/)"
+    "- GRE Physics GR1777 Problems [036](https://study-astrophysics.com/gr1777-036/) and [093](https://study-astrophysics.com/gr1777-093/)"
    ]
   },
   {
@@ -72,7 +72,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
