--- a/QuantumMechanics/1d_infinite_square_well.ipynb
+++ b/QuantumMechanics/1d_infinite_square_well.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [013](https://study-astrophysics.com/gr1777-013/)\n",
+    "- GRE Physics GR1777 Problems [013](https://study-astrophysics.com/gr1777-013/) and [092](https://study-astrophysics.com/gr1777-092/)\n",
     "- GRE Physics GR0177 Problem 044"
    ]
   },
@@ -214,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
