--- a/StatisticalMechanics/carnot_cycle.ipynb
+++ b/StatisticalMechanics/carnot_cycle.ipynb
@@ -46,13 +46,14 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0877: Problem 035"
+    "- GRE Physics GR1777 Problem [091](https://study-astrophysics.com/gr1777-091/)\n",
+    "- GRE Physics GR0877 Problem 035"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
