--- a/ClassicalMechanics/springs.ipynb
+++ b/ClassicalMechanics/springs.ipynb
@@ -53,6 +53,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26b0e68d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "017890cb",
+   "metadata": {},
+   "source": [
+    "## Spring Total (Mechanical) Energy Conservation\n",
+    "\n",
+    "$$ \\large E_\\text{total} = \\underbrace{\\frac{1}{2}kx^2}_{At the maximum stretching (compressing) point} = \\underbrace{\\frac{1}{2} mv^2}_{At $x = 0$} = \\underbrace{\\frac{1}{2}kx^2 + \\frac{1}{2} mv^2}_{At the general point x}$$\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [090](https://study-astrophysics.com/gr1777-090/)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e074868d",
    "metadata": {},
    "source": [
@@ -119,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
