--- a/ClassicalMechanics/springs.ipynb
+++ b/ClassicalMechanics/springs.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26b0e68d",
+   "id": "f7ee9ac3",
    "metadata": {},
    "source": [
     "---"
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "017890cb",
+   "id": "916a555f",
    "metadata": {},
    "source": [
     "## Spring Total (Mechanical) Energy Conservation\n",
     "\n",
-    "$$ \\large E_\\text{total} = \\underbrace{\\frac{1}{2}kx^2}_{At the maximum stretching (compressing) point} = \\underbrace{\\frac{1}{2} mv^2}_{At $x = 0$} = \\underbrace{\\frac{1}{2}kx^2 + \\frac{1}{2} mv^2}_{At the general point x}$$\n",
+    "$$ \\large E_\\text{total} = \\underbrace{\\frac{1}{2}kx^2}_{\\text{At the maximum stretching (compressing) point}} = \\underbrace{\\frac{1}{2} mv^2}_{\\text{At } x = 0} = \\underbrace{\\frac{1}{2}kx^2 + \\frac{1}{2} mv^2}_{\\text{At the general point }x}$$\n",
     "\n",
     "### Related Problems\n",
     "- GRE Physics GR1777 Problem [090](https://study-astrophysics.com/gr1777-090/)\n",
