Added a related problem (GR1777-088)

--- a/ClassicalMechanics/free_fall_motion.ipynb
+++ b/ClassicalMechanics/free_fall_motion.ipynb
@@ -59,6 +59,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [088](https://study-astrophysics.com/gr1777-088/)\n",
     "- GRE Physics GR0877 Problem [002](https://study-astrophysics.com/gr0877-002/)"
    ]
   },
@@ -98,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
