Added a related Problem (GR1777-087)

--- a/ClassicalMechanics/momentum.ipynb
+++ b/ClassicalMechanics/momentum.ipynb
@@ -40,12 +40,13 @@
    "metadata": {},
    "source": [
     "## Linear Momentum Conservation\n",
-    "\n",
-    "\n",
-    "If the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then\n",
+    "<font color='red'>If there is no external force acting on the objects,</font> and if there is the velocities of the particles are $\\vec{u_1}$ and $\\vec{u_2}$ before the interaction, and afterwards they are $\\vec{v_1}$ and $\\vec{v_2}$, then\n",
     "\n",
     "\n",
     "$$ \\large m_1\\vec{u_1} + m_2\\vec{u_2} \\ = \\ m_1\\vec{v_1} + m_2\\vec{v_2}. $$\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "### Related Problems\n",
@@ -103,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
