--- a/ClassicalMechanics/springs.ipynb
+++ b/ClassicalMechanics/springs.ipynb
@@ -69,8 +69,7 @@
     "$$ \\large E_\\text{total} = \\underbrace{\\frac{1}{2}kx^2}_{\\text{At the maximum stretching (compressing) point}} = \\underbrace{\\frac{1}{2} mv^2}_{\\text{At } x = 0} = \\underbrace{\\frac{1}{2}kx^2 + \\frac{1}{2} mv^2}_{\\text{At the general point }x}$$\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [090](https://study-astrophysics.com/gr1777-090/)\n",
-    "\n"
+    "- GRE Physics GR1777 Problem [090](https://study-astrophysics.com/gr1777-090/)"
    ]
   },
   {
