--- a/ClassicalMechanics/mechanical_energy.ipynb
+++ b/ClassicalMechanics/mechanical_energy.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e9bd3fa",
+   "id": "d7c1cafd",
    "metadata": {},
    "source": [
-    "# Mechanical Energy"
+    "# [Mechanical Energy](https://study-astrophysics.com/energy-mechanical/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a5f0b3cf",
+   "id": "ed9c484e",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e17b99",
+   "id": "306fab71",
    "metadata": {},
    "source": [
     "## Kinetic Energy\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe555bf6",
+   "id": "9fe02f9c",
    "metadata": {},
    "source": [
     "---"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb7d8a6b",
+   "id": "06ee5430",
    "metadata": {},
    "source": [
     "## Gravitational Potential Energy (close to the Earth's surface)\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3a3b5db",
+   "id": "0e2b9c3c",
    "metadata": {},
    "source": [
     "---"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd841b0",
+   "id": "97d136d2",
    "metadata": {},
    "source": [
     "## Mechanical Energy Conservation\n",
