--- a/Relativity/relativistic_energy.ipynb
+++ b/Relativity/relativistic_energy.ipynb
@@ -66,13 +66,13 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem 085"
+    "- GRE Physics GR1777 Problem [085](https://study-astrophysics.com/gr1777-085/)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
