Added a related problem (GR1777-084)

--- a/Relativity/relativistic_doppler_effect.ipynb
+++ b/Relativity/relativistic_doppler_effect.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777: Problem 084\n",
+    "- GRE Physics GR1777: Problem [084](https://study-astrophysics.com/gr1777-084/)\n",
     "- GRE Physics GR0877: Problem 055\n",
     "- GRE Physics GR0177: Problem 071"
    ]
@@ -69,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
