--- a/Electrodynamics/radiation.ipynb
+++ b/Electrodynamics/radiation.ipynb
@@ -5,7 +5,7 @@
    "id": "fe7304ba",
    "metadata": {},
    "source": [
-    "# Radiation Pressure"
+    "# Radiation"
    ]
   },
   {
@@ -26,6 +26,38 @@
     "\n",
     "$$ \\large P \\ = \\ \\frac{I}{c} \\ = \\ \\frac{\\langle S \\rangle}{c} \\cos \\theta $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37738ff1",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7479cdc0",
+   "metadata": {},
+   "source": [
+    "## Radiation Force\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d548e02d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae7fe98",
+   "metadata": {},
+   "source": [
+    "## Radiation Flux"
+   ]
   }
  ],
  "metadata": {
@@ -44,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
