--- a/Optics/snells_law.ipynb
+++ b/Optics/snells_law.ipynb
@@ -38,7 +38,11 @@
     "- $\\theta_i$: initial angle with respect to the surface normal\n",
     "\n",
     "\n",
-    "- $\\theta_f$: final angle with respect to the surface normal"
+    "- $\\theta_f$: final angle with respect to the surface normal\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [082](https://study-astrophysics.com/gr1777-082/)"
    ]
   },
   {
@@ -81,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
