Added related problems

--- a/ClassicalMechanics/gravitational_force.ipynb
+++ b/ClassicalMechanics/gravitational_force.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777: Problem [018](https://study-astrophysics.com/gr1777-018/)"
+    "- GRE Physics GR1777 Problems [018](https://study-astrophysics.com/gr1777-018/) and [080](https://study-astrophysics.com/gr1777-080/)"
    ]
   }
  ],
