--- a/ClassicalMechanics/keplers_law.ipynb
+++ b/ClassicalMechanics/keplers_law.ipynb
@@ -80,7 +80,11 @@
     "$$ \\large T = 2\\pi \\sqrt{\\frac{a^3}{GM}} $$\n",
     "\n",
     "\n",
-    "$$ \\large T^2 \\propto a^3 $$"
+    "$$ \\large T^2 \\propto a^3 $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [080](https://study-astrophysics.com/gr1777-080/)"
    ]
   },
   {
@@ -128,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
