--- a/ParticlePhysics/reduced_mass.ipynb
+++ b/ParticlePhysics/reduced_mass.ipynb
@@ -32,7 +32,10 @@
     "$$ \\\\ $$\n",
     "\n",
     "$$ \\large \\mu ={\\cfrac {1}{{\\cfrac {1}{m_{1}}}+{\\cfrac {1}{m_{2}}}}}={\\cfrac {m_{1}m_{2}}{m_{1}+m_{2}}} $$\n",
-    "\n"
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [080](https://study-astrophysics.com/gr1777-080/)"
    ]
   },
   {
@@ -89,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
