--- a/Optics/interference.ipynb
+++ b/Optics/interference.ipynb
@@ -34,7 +34,8 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0177: Problem 069"
+    "- GRE Physics GR1777 Problem [081](https://study-astrophysics.com/gr1777-081/)\n",
+    "- GRE Physics GR0177 Problem 069"
    ]
   },
   {
@@ -76,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
